[package]
name = "sozu-pki-connector"
description = "This application retrieve pki in a directory and load them into Sōzu"
homepage = "https://github.com/CleverCloud/sozu-pki-connector"
documentation = "https://github.com/CleverCloud/sozu-pki-connector/blob/main/README.md"
version = "0.1.0"
rust-version = "1.66.1"
edition = "2021"
license-file = "LICENSE"
authors = ["Emmanuel Bosquet <emmanuel.bosquet@clever-cloud.com>", "Florentin Dubois <florentin.dubois@clever-cloud.com>"]

[dependencies]
axum = { version = "^0.6.19", features = ["tokio"] }
config = "^0.13.3"
clap = { version = "^4.3.19", features = ["derive"] }
hyper = { version = "^0.14.27", default-features = false, features = ["http1", "server"] }
mime = "^0.3.17"
once_cell = "^1.17.1"
paw = "^1.0.0"
prometheus = "^0.13.3"
serde = { version = "^1.0.175", features = ["derive"] }
serde_json = "^1.0.103"
sentry = { version = "^0.31.5", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
sentry-tracing = "^0.31.5"
sozu-client = "^0.2.0"
sozu-command-lib = "^0.15.2"
thiserror = "^1.0.44"
tokio = { version = "^1.29.1", features = ["macros", "rt", "signal"] }
tracing = "^0.1.37"
tracing-subscriber = "^0.3.17"
x509-parser = "^0.15.0"
